--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Here is a photo of me</title>
+	<title>Me</title>
 </head>
 <body>
-	
+	<img src="imgs/IMG_8704.jpeg" alt="Harsh">
 </body>
 </html>
